[gd_scene load_steps=26 format=4 uid="uid://bsp1mbxd6v60e"]

[ext_resource type="Script" uid="uid://c7y0lrd6861q6" path="res://scripts/sala_final.gd" id="1_eln7u"]
[ext_resource type="Texture2D" uid="uid://ccpg7lpnlpyvm" path="res://Sprites/Mundo 3/Parede.png" id="2_eln7u"]
[ext_resource type="Texture2D" uid="uid://bb1r53jxn6nhk" path="res://Sprites/fundo.png" id="3_mf6yf"]
[ext_resource type="Texture2D" uid="uid://c3fp6dchq41ob" path="res://Sprites/Mundo 3/Quina.png" id="4_j3fy2"]
[ext_resource type="Texture2D" uid="uid://djiygois8vxok" path="res://Sprites/Mundo 3/Porta aberta.png" id="6_eln7u"]
[ext_resource type="Texture2D" uid="uid://bqhxjaq8kue71" path="res://Sprites/Mundo 3/Porta fechada 2.png" id="7_j3fy2"]
[ext_resource type="Texture2D" uid="uid://bk711td10o3tk" path="res://Sprites/ch√£oSpriteSheet.png" id="7_xsrnl"]
[ext_resource type="PackedScene" uid="uid://dulo2wd4f52kj" path="res://cenas/porta.tscn" id="8_khvyd"]
[ext_resource type="PackedScene" uid="uid://cqchg7w1lp56i" path="res://cenas/zumbi_boss2.tscn" id="9_mf6yf"]
[ext_resource type="PackedScene" uid="uid://belseh70yciui" path="res://cenas/esqueleto_boss2.tscn" id="10_bdibn"]
[ext_resource type="Texture2D" uid="uid://wwk4kjnfp782" path="res://Sprites/Barra_de_vida_vazia.png" id="10_ehbtd"]
[ext_resource type="Texture2D" uid="uid://dgi6348ykacpn" path="res://Sprites/Barra_de_vida_inimigo.png" id="11_j4n2y"]
[ext_resource type="Script" uid="uid://cmbmeq7ytn4ep" path="res://scripts/texture_progress_bar_zumbiboss2.gd" id="12_uvc3w"]
[ext_resource type="Script" uid="uid://d0icvnmswtisb" path="res://scripts/label_zumbiboss2.gd" id="13_rjoxm"]
[ext_resource type="Script" uid="uid://c856w6kelateo" path="res://scripts/texture_progress_bar_esqueletoboss2.gd" id="15_l22hk"]
[ext_resource type="Script" uid="uid://cbijfi1ecfwqn" path="res://scripts/label_esq_boss2.gd" id="16_h10l4"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_eln7u"]
texture = ExtResource("2_eln7u")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_j3fy2"]
texture = ExtResource("3_mf6yf")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_mf6yf"]
texture = ExtResource("4_j3fy2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_bdibn"]
texture = ExtResource("6_eln7u")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:1/0 = 0
0:2/0 = 0
0:3/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_vm2qj"]
texture = ExtResource("7_j3fy2")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-32, -32, 32, -32, 32, 32, -32, 32)

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_xydkg"]
texture = ExtResource("7_xsrnl")
texture_region_size = Vector2i(64, 64)
0:0/0 = 0
0:0/0/z_index = -8
1:0/0 = 0
1:0/0/z_index = -8
0:1/0 = 0
0:1/0/z_index = -8
1:1/0 = 0
1:1/0/z_index = -8
0:2/0 = 0
0:2/0/z_index = -8
1:2/0 = 0
1:2/0/z_index = -8
0:3/0 = 0
0:3/0/z_index = -8
1:3/0 = 0
1:3/0/z_index = -8
0:4/0 = 0
0:4/0/z_index = -8
1:4/0 = 0
1:4/0/z_index = -8

[sub_resource type="TileSet" id="TileSet_xsrnl"]
tile_size = Vector2i(64, 64)
physics_layer_0/collision_layer = 1
sources/9 = SubResource("TileSetAtlasSource_xydkg")
sources/2 = SubResource("TileSetAtlasSource_j3fy2")
sources/1 = SubResource("TileSetAtlasSource_eln7u")
sources/4 = SubResource("TileSetAtlasSource_mf6yf")
sources/5 = SubResource("TileSetAtlasSource_bdibn")
sources/6 = SubResource("TileSetAtlasSource_vm2qj")

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8p6ll"]
size = Vector2(704, 320)

[sub_resource type="CircleShape2D" id="CircleShape2D_eln7u"]
radius = 33.01515

[node name="Sala_final3" type="Node2D"]
script = ExtResource("1_eln7u")

[node name="TSala" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAABAAIAAQAAAAEAAAABAAMAAQAAAAEAAAABAAQAAQAAAAEAAAABAAUAAQAAAAEAAAABAAYAAQAAAAEAAAACAAEAAQAAAAAAAAACAAcAAQAAAAIAAAADAAEAAQAAAAAAAAADAAMACQAAAAAAAAADAAQACQAAAAAAAAADAAUACQAAAAAAAAADAAcAAQAAAAIAAAAEAAEAAQAAAAAAAAAEAAMACQAAAAAAAAAEAAQACQAAAAAAAAAEAAUACQAAAAAAAAAEAAcAAQAAAAIAAAAFAAEAAQAAAAAAAAAFAAMACQAAAAAAAAAFAAQACQAAAAAAAAAFAAUACQAAAAAAAAAFAAcAAQAAAAIAAAAGAAEAAQAAAAAAAAAGAAMACQAAAAAAAAAGAAQACQAAAAAAAAAGAAUACQAAAAAAAAAGAAcAAQAAAAIAAAAHAAEAAQAAAAAAAAAHAAMACQAAAAAAAAAHAAQACQABAAQAAAAHAAUACQAAAAAAAAAHAAcAAQAAAAIAAAAIAAEAAQAAAAAAAAAIAAMACQAAAAAAAAAIAAQACQAAAAAAAAAIAAUACQAAAAAAAAAIAAcAAQAAAAIAAAAJAAEAAQAAAAAAAAAJAAMACQAAAAAAAAAJAAQACQAAAAAAAAAJAAUACQAAAAAAAAAJAAcAAQAAAAIAAAAKAAEAAQAAAAAAAAAKAAMACQAAAAAAAAAKAAQACQAAAAAAAAAKAAUACQAAAAAAAAAKAAcAAQAAAAIAAAALAAEAAQAAAAAAAAALAAMACQAAAAAAAAALAAQACQAAAAAAAAALAAUACQAAAAAAAAALAAcAAQAAAAIAAAAMAAEAAQAAAAAAAAAMAAcAAQAAAAIAAAANAAIAAQAAAAMAAAANAAMAAQAAAAMAAAANAAQAAQAAAAMAAAANAAUAAQAAAAMAAAANAAYAAQAAAAMAAAAOAAEAAgAAAAAAAAAOAAAAAgAAAAAAAAANAAAAAgAAAAAAAAAMAAAAAgAAAAAAAAALAAAAAgAAAAAAAAAKAAAAAgAAAAAAAAAJAAAAAgAAAAAAAAAIAAAAAgAAAAAAAAAHAAAAAgAAAAAAAAAGAAAAAgAAAAAAAAAFAAAAAgAAAAAAAAAEAAAAAgAAAAAAAAADAAAAAgAAAAAAAAACAAAAAgAAAAAAAAABAAAAAgAAAAAAAAAAAAAAAgAAAAAAAAAAAAEAAgAAAAAAAAAAAAIAAgAAAAAAAAAAAAMAAgAAAAAAAAAAAAQAAgAAAAAAAAAAAAUAAgAAAAAAAAAAAAYAAgAAAAAAAAAAAAcAAgAAAAAAAAAAAAgAAgAAAAAAAAABAAgAAgAAAAAAAAACAAgAAgAAAAAAAAADAAgAAgAAAAAAAAAEAAgAAgAAAAAAAAAFAAgAAgAAAAAAAAAGAAgAAgAAAAAAAAAHAAgAAgAAAAAAAAAIAAgAAgAAAAAAAAAJAAgAAgAAAAAAAAAKAAgAAgAAAAAAAAALAAgAAgAAAAAAAAAMAAgAAgAAAAAAAAANAAgAAgAAAAAAAAAOAAcAAgAAAAAAAAAOAAYAAgAAAAAAAAAOAAUAAgAAAAAAAAAOAAQAAgAAAAAAAAAOAAMAAgAAAAAAAAAOAAIAAgAAAAAAAAAOAAgAAgAAAAAAAAABAAEABAAAAAAAAAABAAcABAAAAAEAAAANAAcABAAAAAIAAAANAAEABAAAAAMAAAACAAUACQABAAEAAAACAAQACQABAAEAAAACAAMACQABAAEAAAAMAAYACQABAAIAAAAMAAUACQABAAAAAAAMAAQACQABAAAAAAAMAAMACQABAAAAAAACAAIACQAAAAMAAAALAAIACQAAAAEAAAAKAAIACQAAAAEAAAAJAAIACQAAAAEAAAAIAAIACQAAAAEAAAAHAAIACQAAAAEAAAAGAAIACQAAAAEAAAAFAAIACQAAAAEAAAAEAAIACQAAAAEAAAADAAIACQAAAAEAAAACAAYACQABAAMAAAAMAAIACQAAAAQAAAALAAYACQAAAAIAAAAKAAYACQAAAAIAAAAJAAYACQAAAAIAAAAIAAYACQAAAAIAAAAHAAYACQAAAAIAAAAGAAYACQAAAAIAAAAFAAYACQAAAAIAAAAEAAYACQAAAAIAAAADAAYACQAAAAIAAAA=")
tile_set = SubResource("TileSet_xsrnl")

[node name="Area_sala" type="Area2D" parent="."]
visible = false
position = Vector2(-5, -2)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area_sala"]
position = Vector2(486, 292)
shape = SubResource("RectangleShape2D_8p6ll")

[node name="porta_oeste" parent="." instance=ExtResource("8_khvyd")]
visible = false
position = Vector2(86, 290)

[node name="Marker2D" type="Marker2D" parent="porta_oeste"]
position = Vector2(-269, 0)

[node name="porta_norte" parent="." instance=ExtResource("8_khvyd")]
visible = false
position = Vector2(479, 84)

[node name="Marker2D" type="Marker2D" parent="porta_norte"]
position = Vector2(1, -252)

[node name="porta_sul" parent="." instance=ExtResource("8_khvyd")]
visible = false
position = Vector2(487, 492)

[node name="Marker2D" type="Marker2D" parent="porta_sul"]
position = Vector2(-2, 251)

[node name="porta_leste" parent="." instance=ExtResource("8_khvyd")]
visible = false
position = Vector2(876, 283)

[node name="Marker2D" type="Marker2D" parent="porta_leste"]
position = Vector2(257, -6)

[node name="saida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="saida"]
position = Vector2(480, 286)
shape = SubResource("CircleShape2D_eln7u")

[node name="zumbi_boss2" parent="." instance=ExtResource("9_mf6yf")]
position = Vector2(414.99994, 273.99994)

[node name="CanvasLayer" type="CanvasLayer" parent="zumbi_boss2"]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="zumbi_boss2/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 632.0
offset_top = -290.0
offset_right = 884.0
offset_bottom = -250.0
grow_vertical = 0
value = 20.0
texture_under = ExtResource("10_ehbtd")
texture_progress = ExtResource("11_j4n2y")
script = ExtResource("12_uvc3w")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="zumbi_boss2/CanvasLayer/TextureProgressBar"]
layout_mode = 0
offset_left = 95.0
offset_top = -24.0
offset_right = 157.0
offset_bottom = -1.0
text = "100/100"
script = ExtResource("13_rjoxm")
metadata/_edit_use_anchors_ = true

[node name="esqueleto_boss2" parent="." instance=ExtResource("10_bdibn")]
position = Vector2(552, 270.99997)

[node name="CanvasLayer" type="CanvasLayer" parent="esqueleto_boss2"]
scale = Vector2(0.5, 0.5)
transform = Transform2D(0.5, 0, 0, 0.5, 0, 0)

[node name="TextureProgressBar" type="TextureProgressBar" parent="esqueleto_boss2/CanvasLayer"]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 1028.0
offset_top = -290.0
offset_right = 1280.0
offset_bottom = -250.0
grow_vertical = 0
value = 20.0
texture_under = ExtResource("10_ehbtd")
texture_progress = ExtResource("11_j4n2y")
script = ExtResource("15_l22hk")
metadata/_edit_use_anchors_ = true

[node name="Label" type="Label" parent="esqueleto_boss2/CanvasLayer/TextureProgressBar"]
layout_mode = 0
offset_left = 95.0
offset_top = -24.0
offset_right = 157.00006
offset_bottom = -1.0
text = "100/100"
script = ExtResource("16_h10l4")
metadata/_edit_use_anchors_ = true

[node name="saida" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="saida"]
position = Vector2(480, 286)
shape = SubResource("CircleShape2D_j3fy2")

[connection signal="body_entered" from="Area_sala" to="." method="_on_area_sala_body_entered"]
[connection signal="body_exited" from="Area_sala" to="." method="_on_area_sala_body_exited"]
[connection signal="body_entered" from="saida" to="." method="_on_saida_body_entered"]
